Pong: Specify pixel_pitch for fp AIDL udfps

--- a/overlay/pong/NTFrameworksResTarget/res/values/config.xml
+++ b/overlay/pong/NTFrameworksResTarget/res/values/config.xml
@@ -474,4 +474,8 @@
 
     <!-- Enable Zram writeback feature to allow unused pages in zram be written to flash. -->
     <bool name="config_zramWriteback">true</bool>
+
+    <!-- Pixel pitch of the device. um/px -->
+    <item name="pixel_pitch" format="float" type="dimen">64.51</item>
+
 </resources>
