Pong: Update from NOS V3.0-250113-1723
Change-Id: I871266376551691e9cdd9ad0c5598fd54a57c53c
Signed-off-by: chandu078 <chandudyavanapelli03@gmail.com>
Signed-off-by: Ghosuto <clash.raja10@gmail.com>

--- a/overlay/qssi/FrameworksResCommon/res/values/config.xml
+++ b/overlay/qssi/FrameworksResCommon/res/values/config.xml
@@ -31,7 +31,16 @@
 
     <!-- If true, the doze component is not started until after the screen has been
          turned off and the screen off animation has been performed. -->
-    <bool name="config_dozeAfterScreenOffByDefault">true</bool>
+    <bool name="config_dozeAfterScreenOff">true</bool>
+
+    <!-- Control whether the always on display mode is available. This should only be enabled on
+         devices where the display has been tuned to be power efficient in DOZE and/or DOZE_SUSPEND
+         states. -->
+    <bool name="config_dozeAlwaysOnDisplayAvailable">true</bool>
+
+    <!-- Control whether the always on display mode is enabled by default. This value will be used
+         during initialization when the setting is still null. -->
+    <bool name="config_dozeAlwaysOnEnabled">false</bool>
 
     <!-- Whether UI for multi user should be shown -->
     <bool name="config_enableMultiUserUI">true</bool>
@@ -312,6 +321,9 @@
 
     <!-- Telephony qualified networks service package name to bind to by default. -->
     <string name="config_qualified_networks_service_package">vendor.qti.iwlan</string>
+
+    <!-- Telephony satellite service package name to bind to by default. -->
+    <string name="config_satellite_service_package">vendor.qti.data.ntnsatapp</string>
 
     <!-- IWLAN data service package name to bind to by default. If none is specified in an overlay, an
          empty string is passed in -->
