--- a/overlay/pong/NTCarrierConfigResTarget/res/xml/vendor.xml
+++ b/overlay/pong/NTCarrierConfigResTarget/res/xml/vendor.xml
@@ -3276,6 +3276,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="carrier_default_data_roaming_enabled_bool" value="true" />
         <boolean name="carrier_vt_available_bool" value="false" />
         <boolean name="vonr_enabled_bool" value="true" />
+        <boolean name="vonr_on_by_default_bool" value="true" />
+        <boolean name="vonr_setting_visibility_bool" value="false" />
     </carrier_config>
     <carrier_config cid="3" name="Telekom Deutschland (DE)">
         <boolean name="editable_wfc_mode_bool" value="false" />
@@ -3959,6 +3961,7 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
     </carrier_config>
     <carrier_config cid="30" name="Optus">
         <boolean name="carrier_allow_transfer_ims_call_bool" value="false" />
+        <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config cid="31" name="Singtel">
         <boolean name="nt_carrier_default_smart_5g_enabled_bool" value="false" />
@@ -4198,6 +4201,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="config_hide_vt_callforward_option" value="false" />
         <long name="nt_delay_show_nw_monitor_fail_icon_timer_long" value="15000" />
         <string name="nt_lte_recovery_settings_string">1:15000</string>
+        <int name="lte_plus_threshold_bandwidth_khz_int" value="0" />
+        <int name="smsToMmsTextThreshold" value="10" />
     </carrier_config>
     <carrier_config cid="849" name="Orange Jordan">
         <boolean name="carrier_wfc_ims_available_bool" value="false" />
@@ -4525,7 +4530,6 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <string name="vvm_destination_number_string">901</string>
         <string name="default_vm_number_string">901</string>
         <boolean name="call_barring_visibility_bool" value="true" />
-        <int name="carrier_default_wfc_ims_mode_int" value="1" />
         <int name="carrier_default_wfc_ims_roaming_mode_int" value="1" />
         <boolean name="carrier_vt_available_bool" value="false" />
         <boolean name="hide_carrier_name_extra_bool" value="true" />
@@ -4536,6 +4540,7 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="nt_hide_5g_standalone_bool" value="true" />
         <boolean name="carrier_allow_transfer_ims_call_bool" value="false" />
         <string name="nt_carrier_ims_user_agent_string">Telefonica VoLTE</string>
+        <int name="carrier_default_wfc_ims_mode_int" value="2" />
     </carrier_config>
     <carrier_config cid="1505" name="Three Mobile">
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
@@ -4689,6 +4694,7 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
     </carrier_config>
     <carrier_config cid="1632" name="U Mobile">
         <boolean name="nt_carrier_default_sa_enabled_bool" value="true" />
+        <boolean name="prefer_2g_bool" value="true" />
     </carrier_config>
     <carrier_config cid="1633" name="Celcom">
         <boolean name="nt_carrier_default_sa_enabled_bool" value="true" />
@@ -4956,11 +4962,13 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
     <carrier_config cid="1963" name="Vi">
         <boolean name="nt_carrier_change_to_auto_mode_bool" value="true" />
         <long name="nt_carrier_change_to_auto_mode_delay_timer_long" value="30000" />
-        <boolean name="config_hide_vt_callforward_option" value="true" />
+        <boolean name="config_hide_vt_callforward_option" value="false" />
         <boolean name="carrier_allow_transfer_ims_call_bool" value="false" />
         <long name="nt_delay_show_nw_monitor_fail_icon_timer_long" value="15000" />
         <boolean name="nt_show_5g_failed_notification_bool" value="true" />
         <string name="nt_lte_recovery_settings_string">1:15000</string>
+        <int name="lte_plus_threshold_bandwidth_khz_int" value="0" />
+        <int name="smsToMmsTextThreshold" value="10" />
     </carrier_config>
     <carrier_config cid="1965" name="Telkom">
         <boolean name="call_forwarding_when_busy_supported_bool" value="false" />
@@ -5126,6 +5134,7 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="carrier_wfc_ims_available_bool" value="false" />
         <boolean name="nt_hide_volte_icon_bool" value="true" />
         <boolean name="nt_hide_5g_standalone_bool" value="true" />
+        <boolean name="carrier_vt_available_bool" value="false" />
     </carrier_config>
     <carrier_config cid="2119" name="FirstNet">
         <boolean name="carrier_vt_available_bool" value="false" />
@@ -5269,12 +5278,13 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
     <carrier_config cid="2378" name="vi">
         <boolean name="nt_carrier_change_to_auto_mode_bool" value="true" />
         <long name="nt_carrier_change_to_auto_mode_delay_timer_long" value="30000" />
-        <boolean name="config_hide_vt_callforward_option" value="true" />
+        <boolean name="config_hide_vt_callforward_option" value="false" />
         <boolean name="carrier_allow_transfer_ims_call_bool" value="false" />
         <int name="lte_plus_threshold_bandwidth_khz_int" value="0" />
         <long name="nt_delay_show_nw_monitor_fail_icon_timer_long" value="15000" />
         <boolean name="nt_show_5g_failed_notification_bool" value="true" />
         <string name="nt_lte_recovery_settings_string">1:15000</string>
+        <int name="smsToMmsTextThreshold" value="10" />
     </carrier_config>
     <carrier_config cid="2385" name="Slovak Telekom">
         <boolean name="show_iccid_in_sim_status_bool" value="true" />
