Pong: overlay: Allow default notification listener access for ParanoidGlyph
So we don't need to prompt the user to allow it

Signed-off-by: Ghosuto <clash.raja10@gmail.com>

--- a/overlay/pong/NTFrameworksResTarget/res/values/config.xml
+++ b/overlay/pong/NTFrameworksResTarget/res/values/config.xml
@@ -474,4 +474,7 @@
     <!-- Pixel pitch of the device. um/px -->
     <item name="pixel_pitch" format="float" type="dimen">64.51</item>
 
+    <!-- Colon separated list of package names that should be granted Notification Listener access -->
+    <string name="config_defaultListenerAccessPackages" translatable="false">co.aospa.glyph</string>
+
 </resources>
