--- a/overlay/pong/NTSystemUIResTarget/res/values/dimens.xml
+++ b/overlay/pong/NTSystemUIResTarget/res/values/dimens.xml
@@ -27,4 +27,9 @@
         relies on this value will not be sized correctly. -->
     <item name="pixel_pitch" format="float" type="dimen">64.4</item>
 
+    <!-- Default device corner radius, used for assist UI -->
+    <dimen name="config_rounded_mask_size">105.5181px</dimen>
+    <dimen name="config_rounded_mask_size_top">105.5181px</dimen>
+    <dimen name="config_rounded_mask_size_bottom">105.5181px</dimen>
+
 </resources>
