--- a/overlay/pong/NTFrameworksResTarget/res/values/config.xml
+++ b/overlay/pong/NTFrameworksResTarget/res/values/config.xml
@@ -477,4 +477,7 @@
     <!-- Colon separated list of package names that should be granted Notification Listener access -->
     <string name="config_defaultListenerAccessPackages" translatable="false">co.aospa.glyph</string>
 
+    <!-- Whether to enable fp unlock when screen turns off on udfps devices -->
+    <bool name="config_screen_off_udfps_enabled">true</bool>
+
 </resources>
