--- a/overlay/pong/NTFrameworksResTarget/res/values/config.xml
+++ b/overlay/pong/NTFrameworksResTarget/res/values/config.xml
@@ -500,5 +500,8 @@
          * The device must be provisioned with HDCP keys (for protected content).
     -->
     <bool name="config_enableWifiDisplay">true</bool>
+
+    <!-- Whether the device supports Smart Pixels -->
+    <bool name="config_supportSmartPixels">true</bool>
  
 </resources>
